cmake_minimum_required(VERSION 3.0.0)
project(mnist_cpp VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_PROJECT_NAME}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_PROJECT_NAME}/libs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_PROJECT_NAME}/bin)
list(APPEND CMAKE_PREFIX_PATH "/home/yehoshua/libraries/libtorch/share/cmake/Torch")
set(CMAKE_CUDA_ARCHITECTURES "native")
set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
enable_language("CUDA")
find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable(mnist_cpp main.cpp)
add_library(my_package  models.cpp datasets.cpp models.h datasets.h)
target_include_directories(my_package PUBLIC ${TORCH_INCLUDE_DIRS})
target_link_libraries(my_package "${TORCH_LIBRARIES}")
target_link_libraries(my_package "${OpenCV_LIBS}")
target_link_libraries(mnist_cpp "${TORCH_LIBRARIES}")
target_link_libraries(mnist_cpp "${OpenCV_LIBS}")
target_link_libraries(mnist_cpp my_package)
set_property(TARGET mnist_cpp PROPERTY CXX_STANDARD 17)


